force-app/main/default/objects/Bedrock_Customer__c/Bedrock_Customer__c.object-meta.xml
<CustomObject>
    <description>Bedrock customer / account. In production this is standard Account.</description>
    <label>Bedrock Customer</label>
    <nameField>
    <displayFormat>BC-{00000}</displayFormat>
    <label>Customer Number</label>
    <type>AutoNumber</type>
</nameField>
    <pluralLabel>Bedrock Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>