force-app/main/default/objects/Bedrock_Customer__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>Stable external id (e.g., CUST-10001).</description>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>