force-app/main/default/objects/Bedrock_Customer__c/fields/Service_Tier__c.field-meta.xml
<CustomField>
    <fullName>Service_Tier__c</fullName>
    <description>Drives SLA + entitlements per KB sections 2 and 3.</description>
    <label>Service Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>