force-app/main/default/objects/Bedrock_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Id__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Service_Tier__c</columns>
    <columns>Account_Tier__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>